testing backward pass

--- a/nn-cuda/python-codes/testing.ipynb
+++ b/nn-cuda/python-codes/testing.ipynb
@@ -151,6 +151,68 @@
     "print( np.allclose(Y, Y_torch.detach().numpy(), atol=1e-4, rtol=1e-4))\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Forward pass comparison:\n",
+      "Y (numpy): [0.09152496 0.         0.3774835  0.         0.59312725]\n",
+      "Y_torch: [0.09152496 0.         0.3774835  0.         0.59312725]\n",
+      "Match: True\n",
+      "\n",
+      "Backward pass comparison:\n",
+      "dX (numpy): [-0.9976806   0.          0.29630423  0.         -0.45951718]\n",
+      "dX_torch: [-0.9976806   0.          0.29630423  0.         -0.45951718]\n",
+      "Match: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Relu forward and backward tests\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "# Load data\n",
+    "X = np.load(r'../with-torch-tests/relu-layer/X_relu.npy')\n",
+    "Y = np.load(r'../with-torch-tests/relu-layer/out_relu.npy')\n",
+    "dY = np.load(r'../with-torch-tests/relu-layer/up_grad_relu.npy')\n",
+    "dX = np.load(r'../with-torch-tests/relu-layer/down_grad_relu.npy')\n",
+    "# Convert to PyTorch tensors\n",
+    "# make sure to set requires_grad=True for the input tensor so that the Autograd engine can compute the gradients\n",
+    "X_torch = torch.from_numpy(X).to(torch.float32).requires_grad_(True)\n",
+    "dY_torch = torch.from_numpy(dY).to(torch.float32)\n",
+    "\n",
+    "# Forward pass with ReLU\n",
+    "relu = nn.ReLU()\n",
+    "Y_torch = relu(X_torch)\n",
+    "\n",
+    "# Compare the forward pass results\n",
+    "print(\"Forward pass comparison:\")\n",
+    "print(\"Y (numpy):\", Y[0, 0:5])\n",
+    "print(\"Y_torch:\", Y_torch.detach().numpy()[0, 0:5])\n",
+    "print(\"Match:\", np.allclose(Y, Y_torch.detach().numpy(), atol=1e-4, rtol=1e-4))\n",
+    "\n",
+    "\n",
+    "# Validate the backward pass\n",
+    "Y_torch.backward(dY_torch)\n",
+    "\n",
+    "# Get the gradients from X_torch\n",
+    "dX_torch = X_torch.grad\n",
+    "\n",
+    "# Compare the backward pass results\n",
+    "print(\"\\nBackward pass comparison:\")\n",
+    "print(\"dX (numpy):\", dX[0, 0:5])\n",
+    "print(\"dX_torch:\", dX_torch.numpy()[0, 0:5])\n",
+    "print(\"Match:\", np.allclose(dX, dX_torch.numpy(), atol=1e-4, rtol=1e-4))\n"
+   ]
   }
  ],
  "metadata": {
