--- a/nn-cuda/python-codes/cross_entropy.ipynb
+++ b/nn-cuda/python-codes/cross_entropy.ipynb
@@ -65,37 +65,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([1.6689, 2.1257, 1.5191])\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "Dimension out of range (expected to be in range of [-1, 0], but got 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[108], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(output)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Example of target with class probabilities\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m target \u001b[38;5;241m=\u001b[39m \u001b[43mtarget\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msoftmax\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdim\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m output \u001b[38;5;241m=\u001b[39m loss(\u001b[38;5;28minput\u001b[39m, target)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(output)\n",
-      "\u001b[1;31mIndexError\u001b[0m: Dimension out of range (expected to be in range of [-1, 0], but got 1)"
+      "[[7.3754084e-01 3.7342447e-01 9.5367289e-01 ... 5.4902799e-02\n",
+      "  8.1377608e-01 4.7416610e-01]\n",
+      " [7.8127384e-02 8.2253486e-01 4.8448133e-01 ... 8.9083529e-01\n",
+      "  6.8590349e-01 5.9517199e-01]\n",
+      " [8.7215799e-01 8.6217839e-01 4.2280343e-01 ... 8.0529189e-01\n",
+      "  1.6940825e-01 2.4695578e-01]\n",
+      " ...\n",
+      " [7.9311504e+00 8.1496626e-01 1.0159612e-01 ... 7.3689991e-01\n",
+      "  9.6874905e-01 9.7122103e-01]\n",
+      " [7.9042939e-03 8.5082555e-01 7.0662558e-01 ... 4.6308786e-01\n",
+      "  7.9729605e-01 2.4710837e-01]\n",
+      " [5.4576248e-01 1.8927580e-01 6.8874174e-01 ... 6.7033905e-01\n",
+      "  1.4654988e+00 9.1537219e-01]]\n",
+      "[2.9195728  1.2787329  0.11892429 0.10178272 0.86642134]\n",
+      "tensor([2.9196, 1.2787, 0.1189, 0.1018, 0.8664])\n",
+      "True\n"
      ]
     }
    ],
    "source": [
-    "# Example of target with class indices\n",
-    "loss = nn.CrossEntropyLoss(reduction='none')\n",
-    "output = loss(input, target)\n",
-    "print(output)\n",
-    "# Example of target with class probabilities\n",
-    "target = target.softmax(dim=1)\n",
-    "output = loss(input, target)\n",
-    "print(output)"
+    "# read arrays from .npy files and func Linear to compare\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "inp = np.load('../with-torch-tests/cross-entropy-layer/h_predictions.npy')\n",
+    "target = np.load('../with-torch-tests/cross-entropy-layer/h_targets.npy')\n",
+    "h_losses = np.load('../with-torch-tests/cross-entropy-layer/h_losses.npy')\n",
+    "inp_torch = torch.from_numpy(inp).to(torch.float32)\n",
+    "inp_torch = torch.log(inp_torch)\n",
+    "target_torch = torch.from_numpy(target).to(torch.int64)\n",
+    "loss = nn.NLLLoss(reduction='none')\n",
+    "out_torch = loss(inp_torch, target_torch)\n",
+    "\n",
+    "print(h_losses[0:5])\n",
+    "print(out_torch[0:5])\n",
+    "print(np.allclose(h_losses, out_torch.detach().numpy(), atol=1e-4, rtol=1e-4))"
    ]
   }
  ],
