--- a/nn-cuda/python-codes/testing.ipynb
+++ b/nn-cuda/python-codes/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -10,11 +10,11 @@
      "output_type": "stream",
      "text": [
       "Outputs:\n",
-      "tensor([[0.3220, 0.1954, 0.4826],\n",
-      "        [0.2762, 0.2798, 0.4440],\n",
-      "        [0.2625, 0.2510, 0.4864],\n",
-      "        [0.2631, 0.2614, 0.4754]], grad_fn=<SoftmaxBackward0>)\n",
-      "Loss: 1.0052919387817383\n"
+      "tensor([[0.3025, 0.3291, 0.3683],\n",
+      "        [0.2412, 0.2542, 0.5046],\n",
+      "        [0.3385, 0.3532, 0.3083],\n",
+      "        [0.3237, 0.3334, 0.3428]], grad_fn=<SoftmaxBackward0>)\n",
+      "Loss: 1.0599757432937622\n"
      ]
     }
    ],
@@ -79,17 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([27.6292, 23.5983, 28.8660, 25.8777, 24.1224], grad_fn=<SliceBackward0>)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# random array and save it to a file .npy\n",
     "# import numpy as np\n",
@@ -115,15 +107,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-3.7956476  -3.9812362   0.08876852  1.2680509   0.22692043]\n",
-      "tensor([-3.7956, -3.9812,  0.0888,  1.2681,  0.2269], grad_fn=<SliceBackward0>)\n",
+      "[-2.4500256  -4.164225    2.0214434   0.48262623  0.05314786]\n",
+      "tensor([-2.4500, -4.1642,  2.0214,  0.4826,  0.0531], grad_fn=<SliceBackward0>)\n",
       "True\n"
      ]
     }
@@ -154,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -212,6 +204,42 @@
     "print(\"dX (numpy):\", dX[0, 0:5])\n",
     "print(\"dX_torch:\", dX_torch.numpy()[0, 0:5])\n",
     "print(\"Match:\", np.allclose(dX, dX_torch.numpy(), atol=1e-4, rtol=1e-4))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = nn.LogSoftmax(dim=1)\n",
+    "loss = nn.NLLLoss()\n",
+    "# input is of size N x C = 3 x 5\n",
+    "input = torch.randn(3, 5, requires_grad=True)\n",
+    "# each element in target has to have 0 <= value < C\n",
+    "target = torch.tensor([1, 0, 4])\n",
+    "print(target.dtype)\n",
+    "output = loss(m(input), target)\n",
+    "output.backward()\n",
+    "# 2D loss example (used, for example, with image inputs)\n",
+    "N, C = 5, 4\n",
+    "loss = nn.NLLLoss()\n",
+    "# input is of size N x C x height x width\n",
+    "data = torch.randn(N, 16, 10, 10)\n",
+    "conv = nn.Conv2d(16, C, (3, 3))\n",
+    "m = nn.LogSoftmax(dim=1)\n",
+    "# each element in target has to have 0 <= value < C\n",
+    "target = torch.empty(N, 8, 8, dtype=torch.long).random_(0, C)\n",
+    "output = loss(m(conv(data)), target)\n",
+    "output.backward()"
    ]
   }
  ],
