--- a/nn-cuda/python-codes/testing.ipynb
+++ b/nn-cuda/python-codes/testing.ipynb
@@ -34,6 +34,7 @@
     "        self.activation1 = nn.ReLU() # Activation function after the first layer\n",
     "        self.linear2 = nn.Linear(hidden_size, output_size) # Second linear layer\n",
     "        self.softmax = nn.Softmax(dim=1) # Softmax layer for the output\n",
+    "        self.logsoftmax = nn.LogSoftmax(dim=1) # LogSoftmax layer for the output\n",
     "    \n",
     "    def forward(self, x):\n",
     "        # Define the forward pass\n",
@@ -41,6 +42,7 @@
     "        x = self.activation1(x)\n",
     "        x = self.linear2(x)\n",
     "        x = self.softmax(x)\n",
+    "        x = self.logsoftmax(x)\n",
     "        return x\n",
     "\n",
     "# Create an instance of the network\n",
@@ -50,10 +52,10 @@
     "model = SimpleNN(input_size, hidden_size, output_size)\n",
     "\n",
     "# Create a loss function\n",
-    "criterion = nn.CrossEntropyLoss()\n",
+    "criterion = nn.NLLLoss()\n",
     "\n",
     "# Create an optimizer\n",
-    "optimizer = optim.SGD(model.parameters(), lr=0.01)\n",
+    "# optimizer = optim.SGD(model.parameters(), lr=0.01)\n",
     "\n",
     "# Define a batch of inputs and targets\n",
     "batch_size = 4\n",
@@ -67,10 +69,10 @@
     "loss = criterion(outputs, targets)\n",
     "\n",
     "# Backward pass\n",
-    "loss.backward()\n",
+    "# loss.backward()\n",
     "\n",
     "# Update weights\n",
-    "optimizer.step()\n",
+    "# optimizer.step()\n",
     "\n",
     "# Optionally, print output and loss\n",
     "print(f\"Outputs:\\n{outputs}\")\n",
@@ -103,6 +105,49 @@
     "# Y = l(X_torch)\n",
     "# np.save('../with-torch-tests/linear-layer/Y.npy', Y.detach().numpy())\n",
     "# print(Y[0,0:5])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "# Load the input data\n",
+    "ln1b = np.load('../with-torch-tests/linear-layer/ln1b.npy')\n",
+    "ln1w = np.load('../with-torch-tests/linear-layer/ln1w.npy')\n",
+    "ln2b = np.load('../with-torch-tests/linear-layer/ln2b.npy')\n",
+    "ln2w = np.load('../with-torch-tests/linear-layer/ln2w.npy')\n",
+    "target = np.load('../with-torch-tests/linear-layer/target.npy')\n",
+    "X_c = np.load('../with-torch-tests/linear-layer/X_c.npy')\n",
+    "\n",
+    "# get sizes\n",
+    "B,N = X_c.shape\n",
+    "H,N = ln1w.shape\n",
+    "l1 = nn.Linear(N,H)\n",
+    "l1.weight.data = torch.from_numpy(ln1w).to(torch.float32)\n",
+    "l1.bias.data = torch.from_numpy(ln1b).to(torch.float32)\n",
+    "\n",
+    "H2,H = ln2w.shape\n",
+    "l2 = nn.Linear(H2,H)\n",
+    "l2.weight.data = torch.from_numpy(ln2w).to(torch.float32)\n",
+    "l2.bias.data = torch.from_numpy(ln2b).to(torch.float32)\n",
+    "\n",
+    "X = torch.from_numpy(X_c).to(torch.float32)\n",
+    "Y1 = l1(X)\n",
+    "Y2 = l2(Y1)\n",
+    "\n",
+    "# Compute the loss\n",
+    "softmax = nn.softmax()\n",
+    "logsoftmax = nn.logsoftmax()\n",
+    "nllloss = nn.NLLloss()\n",
+    "\n",
+    "loss = nllloss(logsoftmax(softmax(Y2)), torch.from_numpy(target).to(torch.int64))\n",
+    "print(loss)"
    ]
   },
   {
