small bugs with random arrays and big ones too

--- a/nn-cuda/python-codes/testing.ipynb
+++ b/nn-cuda/python-codes/testing.ipynb
@@ -109,45 +109,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 5])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor(4.7015, grad_fn=<NllLossBackward0>)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "\n",
     "# Load the input data\n",
-    "ln1b = np.load('../with-torch-tests/linear-layer/ln1b.npy')\n",
-    "ln1w = np.load('../with-torch-tests/linear-layer/ln1w.npy')\n",
-    "ln2b = np.load('../with-torch-tests/linear-layer/ln2b.npy')\n",
-    "ln2w = np.load('../with-torch-tests/linear-layer/ln2w.npy')\n",
-    "target = np.load('../with-torch-tests/linear-layer/target.npy')\n",
-    "X_c = np.load('../with-torch-tests/linear-layer/X_c.npy')\n",
+    "ln1b = np.load('../with-torch-tests/all-model/ln1b.npy')\n",
+    "ln1w = np.load('../with-torch-tests/all-model/ln1w.npy')\n",
+    "ln2b = np.load('../with-torch-tests/all-model/ln2b.npy')\n",
+    "ln2w = np.load('../with-torch-tests/all-model/ln2w.npy')\n",
+    "target = np.load('../with-torch-tests/all-model/target.npy')\n",
+    "X_c = np.load('../with-torch-tests/all-model/X_c.npy')\n",
     "\n",
     "# get sizes\n",
     "B,N = X_c.shape\n",
-    "H,N = ln1w.shape\n",
-    "l1 = nn.Linear(N,H)\n",
+    "H1,N = ln1w.shape\n",
+    "l1 = nn.Linear(N,H1)\n",
     "l1.weight.data = torch.from_numpy(ln1w).to(torch.float32)\n",
     "l1.bias.data = torch.from_numpy(ln1b).to(torch.float32)\n",
     "\n",
-    "H2,H = ln2w.shape\n",
-    "l2 = nn.Linear(H2,H)\n",
+    "H2,_ = ln2w.shape\n",
+    "l2 = nn.Linear(H1,H2)\n",
     "l2.weight.data = torch.from_numpy(ln2w).to(torch.float32)\n",
     "l2.bias.data = torch.from_numpy(ln2b).to(torch.float32)\n",
     "\n",
     "X = torch.from_numpy(X_c).to(torch.float32)\n",
     "Y1 = l1(X)\n",
     "Y2 = l2(Y1)\n",
+    "print(Y2.shape)\n",
     "\n",
-    "# Compute the loss\n",
-    "softmax = nn.softmax()\n",
-    "logsoftmax = nn.logsoftmax()\n",
-    "nllloss = nn.NLLloss()\n",
-    "\n",
-    "loss = nllloss(logsoftmax(softmax(Y2)), torch.from_numpy(target).to(torch.int64))\n",
-    "print(loss)"
+    "criterion = nn.CrossEntropyLoss(reduction='sum')\n",
+    "loss = criterion(Y2, torch.from_numpy(target).long())\n",
+    "loss"
    ]
   },
   {
