solve softmax bug

--- a/nn-cuda/python-codes/testing.ipynb
+++ b/nn-cuda/python-codes/testing.ipynb
@@ -2,22 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Outputs:\n",
-      "tensor([[0.3025, 0.3291, 0.3683],\n",
-      "        [0.2412, 0.2542, 0.5046],\n",
-      "        [0.3385, 0.3532, 0.3083],\n",
-      "        [0.3237, 0.3334, 0.3428]], grad_fn=<SoftmaxBackward0>)\n",
-      "Loss: 1.0599757432937622\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "import torch\n",
@@ -81,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,16 +100,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([2, 5])\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "tensor(4.7015, grad_fn=<NllLossBackward0>)"
+       "tensor(176.5740, grad_fn=<NllLossBackward0>)"
       ]
      },
      "execution_count": 32,
@@ -134,6 +114,59 @@
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "# Load the input data\n",
+    "ln1b = np.load('../with-torch-tests/all-model-cpu/ln1b.npy')\n",
+    "ln1w = np.load('../with-torch-tests/all-model-cpu/ln1w.npy')\n",
+    "ln2b = np.load('../with-torch-tests/all-model-cpu/ln2b.npy')\n",
+    "ln2w = np.load('../with-torch-tests/all-model-cpu/ln2w.npy')\n",
+    "target = np.load('../with-torch-tests/all-model-cpu/target.npy')\n",
+    "X_c = np.load('../with-torch-tests/all-model-cpu/X_c.npy')\n",
+    "\n",
+    "# get sizes\n",
+    "B,N = X_c.shape\n",
+    "H1,N = ln1w.shape\n",
+    "l1 = nn.Linear(N,H1)\n",
+    "l1.weight.data = torch.from_numpy(ln1w).to(torch.float32)\n",
+    "l1.bias.data = torch.from_numpy(ln1b).to(torch.float32)\n",
+    "\n",
+    "\n",
+    "H2,_ = ln2w.shape\n",
+    "l2 = nn.Linear(H1,H2)\n",
+    "l2.weight.data = torch.from_numpy(ln2w).to(torch.float32)\n",
+    "l2.bias.data = torch.from_numpy(ln2b).to(torch.float32)\n",
+    "\n",
+    "X = torch.from_numpy(X_c).to(torch.float32)\n",
+    "Y1 = l1(X)\n",
+    "y1_relu = F.relu(Y1)\n",
+    "Y2 = l2(y1_relu)\n",
+    "criterion = nn.CrossEntropyLoss(reduction='sum')\n",
+    "loss = criterion(Y2, torch.from_numpy(target).long())\n",
+    "loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(176.5740, grad_fn=<NllLossBackward0>)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
     "\n",
     "# Load the input data\n",
     "ln1b = np.load('../with-torch-tests/all-model/ln1b.npy')\n",
@@ -150,6 +183,7 @@
     "l1.weight.data = torch.from_numpy(ln1w).to(torch.float32)\n",
     "l1.bias.data = torch.from_numpy(ln1b).to(torch.float32)\n",
     "\n",
+    "\n",
     "H2,_ = ln2w.shape\n",
     "l2 = nn.Linear(H1,H2)\n",
     "l2.weight.data = torch.from_numpy(ln2w).to(torch.float32)\n",
@@ -157,9 +191,8 @@
     "\n",
     "X = torch.from_numpy(X_c).to(torch.float32)\n",
     "Y1 = l1(X)\n",
-    "Y2 = l2(Y1)\n",
-    "print(Y2.shape)\n",
-    "\n",
+    "y1_relu = F.relu(Y1)\n",
+    "Y2 = l2(y1_relu)\n",
     "criterion = nn.CrossEntropyLoss(reduction='sum')\n",
     "loss = criterion(Y2, torch.from_numpy(target).long())\n",
     "loss"
@@ -167,19 +200,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-2.4500256  -4.164225    2.0214434   0.48262623  0.05314786]\n",
-      "tensor([-2.4500, -4.1642,  2.0214,  0.4826,  0.0531], grad_fn=<SliceBackward0>)\n",
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# read arrays from .npy files and func Linear to compare\n",
     "import numpy as np\n",
@@ -206,25 +229,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Forward pass comparison:\n",
-      "Y (numpy): [0.09152496 0.         0.3774835  0.         0.59312725]\n",
-      "Y_torch: [0.09152496 0.         0.3774835  0.         0.59312725]\n",
-      "Match: True\n",
-      "\n",
-      "Backward pass comparison:\n",
-      "dX (numpy): [-0.9976806   0.          0.29630423  0.         -0.45951718]\n",
-      "dX_torch: [-0.9976806   0.          0.29630423  0.         -0.45951718]\n",
-      "Match: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Relu forward and backward tests\n",
     "import numpy as np\n",
@@ -268,17 +275,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "m = nn.LogSoftmax(dim=1)\n",
     "loss = nn.NLLLoss()\n",
@@ -319,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
