--- a/nn-cuda/python-codes/testing.ipynb
+++ b/nn-cuda/python-codes/testing.ipynb
@@ -300,6 +300,43 @@
     "output = loss(m(conv(data)), target)\n",
     "output.backward()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(30, 20) (40, 30) (20, 40)\n",
+      "[[ 1.4050677  -1.8806608   2.3820658  -0.1269159   0.5118277 ]\n",
+      " [-4.122203    0.73083335  0.22492549 -0.6128714  -3.235505  ]\n",
+      " [-0.07567507  4.22537     0.88036996  4.8042626  -0.48165905]\n",
+      " [ 1.0192683   3.6987364   0.52165043  2.015993    1.4482629 ]\n",
+      " [ 1.1117827   1.1345832   2.6443055  -1.7356268   1.8309695 ]]\n",
+      "[[ 1.4050677  -1.880661    2.382066   -0.126916    0.51182777]\n",
+      " [-4.122203    0.73083335  0.22492555 -0.6128714  -3.235505  ]\n",
+      " [-0.07567499  4.22537     0.88036996  4.804262   -0.48165917]\n",
+      " [ 1.0192683   3.6987364   0.5216504   2.0159929   1.4482629 ]\n",
+      " [ 1.1117828   1.134583    2.6443057  -1.7356269   1.8309695 ]]\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "A = np.load(r'../with-torch-tests/matmul/A.npy')\n",
+    "B = np.load(r'../with-torch-tests/matmul/B.npy')\n",
+    "C = np.load(r'../with-torch-tests/matmul/C.npy')\n",
+    "print(A.shape, B.shape, C.shape)\n",
+    "C_py = A.T @ B.T\n",
+    "print(C[:5,:5])\n",
+    "print(C_py[:5,:5])\n",
+    "print(np.allclose(C, C_py, atol=1e-4, rtol=1e-4))\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -318,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
