--- a/nn-cuda/python-codes/testing.ipynb
+++ b/nn-cuda/python-codes/testing.ipynb
@@ -337,6 +337,101 @@
     "print(np.allclose(C, C_py, atol=1e-4, rtol=1e-4))\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(300, 1000) (350, 1000) (350,) (300, 350)\n",
+      "dLdW (numpy): [ 0.24916653 -8.158649    0.0767038   1.0023702  -2.7791066 ]\n",
+      "dLdW_torch: [ 0.24916653 -8.158649    0.0767038   1.0023702  -2.7791066 ]\n",
+      "Match: True\n",
+      "dLdb (numpy): [[20.059994 ]\n",
+      " [15.267552 ]\n",
+      " [11.244912 ]\n",
+      " [13.10672  ]\n",
+      " [18.342787 ]\n",
+      " [-6.4514303]\n",
+      " [-2.9472344]\n",
+      " [ 5.5811644]\n",
+      " [ 1.6450696]\n",
+      " [-9.8003435]]\n",
+      "dLdb_torch: [[20.060001 ]\n",
+      " [15.267556 ]\n",
+      " [11.24491  ]\n",
+      " [13.106721 ]\n",
+      " [18.342783 ]\n",
+      " [-6.4514284]\n",
+      " [-2.947233 ]\n",
+      " [ 5.5811644]\n",
+      " [ 1.6450698]\n",
+      " [-9.800346 ]]\n",
+      "Match: True\n",
+      "dLdX (numpy): [-5.308016   7.6920857  3.833842   2.9945598 -2.629773 ]\n",
+      "dLdX_torch: [-5.308016   7.6920857  3.833842   2.9945598 -2.629773 ]\n",
+      "Match: True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test backward pass of the Linear layer\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "# Load the input data\n",
+    "X = np.load('../with-torch-tests/linear-backward/X_c.npy')\n",
+    "W = np.load('../with-torch-tests/linear-backward/W_c.npy')\n",
+    "bias = np.load('../with-torch-tests/linear-backward/bias_c.npy')\n",
+    "upgrad = np.load('../with-torch-tests/linear-backward/up_grad.npy')\n",
+    "\n",
+    "\n",
+    "# out to comoare to\n",
+    "dLdb = np.load('../with-torch-tests/linear-backward/dLdb.npy')\n",
+    "dLdW = np.load('../with-torch-tests/linear-backward/dLdW.npy')\n",
+    "dLdX = np.load('../with-torch-tests/linear-backward/dLdX.npy')\n",
+    "\n",
+    "# get sizes\n",
+    "B,N = X.shape\n",
+    "M,_ = W.shape\n",
+    "\n",
+    "print(X.shape, W.shape, bias.shape, upgrad.shape)\n",
+    "\n",
+    "lin = nn.Linear(N,M)\n",
+    "lin.weight.data = torch.from_numpy(W).to(torch.float32)\n",
+    "lin.bias.data = torch.from_numpy(bias).to(torch.float32)\n",
+    "X_torch = torch.from_numpy(X).to(torch.float32).requires_grad_(True)\n",
+    "upgrad_torch = torch.from_numpy(upgrad).to(torch.float32)\n",
+    "\n",
+    "# Forward pass\n",
+    "Y = lin(X_torch)\n",
+    "\n",
+    "# Backward pass\n",
+    "Y.backward(upgrad_torch)\n",
+    "\n",
+    "# Get the gradients\n",
+    "dLdW_torch = lin.weight.grad\n",
+    "dLdb_torch = lin.bias.grad\n",
+    "dLdX_torch = X_torch.grad\n",
+    "\n",
+    "# Compare the gradients\n",
+    "print(\"dLdW (numpy):\", dLdW[0, 0:5])\n",
+    "print(\"dLdW_torch:\", dLdW_torch.numpy()[0, 0:5])\n",
+    "print(\"Match:\", np.allclose(dLdW, dLdW_torch.numpy(), atol=1e-4, rtol=1e-4))\n",
+    "\n",
+    "print(\"dLdb (numpy):\", dLdb[0:10].reshape(-1, 1))\n",
+    "print(\"dLdb_torch:\", dLdb_torch.numpy()[0:10].reshape(-1, 1))\n",
+    "print(\"Match:\", np.allclose(dLdb.reshape(-1, 1), dLdb_torch.numpy().reshape(-1, 1), atol=1e-2, rtol=1e-2))\n",
+    "\n",
+    "print(\"dLdX (numpy):\", dLdX[0, 0:5])\n",
+    "print(\"dLdX_torch:\", dLdX_torch.numpy()[0, 0:5])\n",
+    "print(\"Match:\", np.allclose(dLdX, dLdX_torch.numpy(), atol=1e-4, rtol=1e-4))"
+   ]
   }
  ],
  "metadata": {
