--- a/nn-cuda/python-codes/testing.ipynb
+++ b/nn-cuda/python-codes/testing.ipynb
@@ -405,6 +405,7 @@
     "lin = nn.Linear(N,M)\n",
     "lin.weight.data = torch.from_numpy(W).to(torch.float32)\n",
     "lin.bias.data = torch.from_numpy(bias).to(torch.float32)\n",
+    "# X must be a tensor with requires_grad=True\n",
     "X_torch = torch.from_numpy(X).to(torch.float32).requires_grad_(True)\n",
     "upgrad_torch = torch.from_numpy(upgrad).to(torch.float32)\n",
     "\n",
