--- a/nn-cuda/python-codes/cross_entropy_softmax_backward.ipynb
+++ b/nn-cuda/python-codes/cross_entropy_softmax_backward.ipynb
@@ -16,26 +16,45 @@
     }
    ],
    "source": [
+    "# Relu forward and backward tests\n",
+    "import numpy as np\n",
     "import torch\n",
+    "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "\n",
-    "def crossentropy_with_softmax_backward(logits, targets):    \n",
-    "    # Compute cross-entropy loss\n",
-    "    loss = F.cross_entropy(logits, targets)\n",
-    "    \n",
-    "    # Backward pass\n",
-    "    loss.backward()\n",
+    "# Load data\n",
+    "X = np.load(r'../with-torch-tests/relu-layer/X_relu.npy')\n",
+    "Y = np.load(r'../with-torch-tests/relu-layer/out_relu.npy')\n",
+    "dY = np.load(r'../with-torch-tests/relu-layer/up_grad_relu.npy')\n",
+    "dX = np.load(r'../with-torch-tests/relu-layer/down_grad_relu.npy')\n",
     "\n",
-    "# Example usage\n",
-    "logits = torch.tensor([[-0.8513, -0.4595, -0.2799, -0.4894,  0.9706],\n",
-    "        [-0.3622,  0.8685, -0.6427,  0.7151, -0.9303],\n",
-    "        [-0.9828,  0.2535, -0.0282, -0.4540,  0.6044]],requires_grad=True)\n",
+    "# Convert to PyTorch tensors\n",
+    "# make sure to set requires_grad=True for the input tensor so that the Autograd engine can compute the gradients\n",
+    "X_torch = torch.from_numpy(X).to(torch.float32).requires_grad_(True)\n",
+    "dY_torch = torch.from_numpy(dY).to(torch.float32)\n",
     "\n",
-    "targets = torch.tensor([3,4,3])  # Example targets\n",
-    "crossentropy_with_softmax_backward(logits, targets)\n",
+    "# Forward pass with ReLU\n",
+    "loss = nn.CrossEntropyLoss()\n",
+    "Y_torch = loss(X_torch)\n",
     "\n",
-    "# Check gradients\n",
-    "print(logits.grad)\n"
+    "# Compare the forward pass results\n",
+    "print(\"Forward pass comparison:\")\n",
+    "print(\"Y (numpy):\", Y[0, 0:5])\n",
+    "print(\"Y_torch:\", Y_torch.detach().numpy()[0, 0:5])\n",
+    "print(\"Match:\", np.allclose(Y, Y_torch.detach().numpy(), atol=1e-4, rtol=1e-4))\n",
+    "\n",
+    "\n",
+    "# Validate the backward pass\n",
+    "Y_torch.backward(dY_torch)\n",
+    "\n",
+    "# Get the gradients from X_torch\n",
+    "dX_torch = X_torch.grad\n",
+    "\n",
+    "# Compare the backward pass results\n",
+    "print(\"\\nBackward pass comparison:\")\n",
+    "print(\"dX (numpy):\", dX[0, 0:5])\n",
+    "print(\"dX_torch:\", dX_torch.numpy()[0, 0:5])\n",
+    "print(\"Match:\", np.allclose(dX, dX_torch.numpy(), atol=1e-4, rtol=1e-4))"
    ]
   },
   {
