--- a/nn-cuda/python-codes/softmax.ipynb
+++ b/nn-cuda/python-codes/softmax.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5.7281235e-05 9.1542053e-05 5.8205687e-02 6.6314016e-05 9.8114615e-05]\n",
-      "tensor([5.7281e-05, 9.1542e-05, 5.8206e-02, 6.6314e-05, 9.8115e-05])\n",
+      "[0.         0.00157026 0.9984297 ] [0.40329954 0.59670043 0.        ] [2.1250953e-05 9.9997878e-01 0.0000000e+00]\n",
+      "[0.         0.00157026 0.9984297 ] [0.40329954 0.59670043 0.        ] [2.1250953e-05 9.9997878e-01 0.0000000e+00]\n",
       "True\n"
      ]
     }
@@ -27,10 +27,58 @@
     "#apply softmax with torch\n",
     "inp_torch = torch.from_numpy(inp).to(torch.float32)\n",
     "out_torch = nn.functional.softmax(inp_torch, dim=1)\n",
-    "\n",
-    "print(out[0,0:5])\n",
-    "print(out_torch[0,0:5])\n",
+    " \n",
+    "print(*out)\n",
+    "print(*out_torch.detach().numpy())\n",
     "print( np.allclose(out, out_torch.detach().numpy(), atol=1e-4, rtol=1e-4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([2, 0, 1])\n",
+      "[1.5712201e-03 9.0807462e-01 2.0027361e-05]\n",
+      "tensor(0.9097, grad_fn=<NllLossBackward0>)\n",
+      "False\n",
+      "[ 0.          0.00157026 -0.00157028] [-0.59670043  0.59670043  0.        ] [ 2.1250959e-05 -2.1219254e-05  0.0000000e+00]\n",
+      "[ 0.          0.00157026 -0.00157028] [-0.59670043  0.59670043  0.        ] [ 2.1250953e-05 -2.1219254e-05  0.0000000e+00]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# read arrays from .npy files and func Linear to compare\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "inp = np.load('../with-torch-tests/softmax-layer/h_inp.npy')\n",
+    "target = np.load('../with-torch-tests/cross-entropy-layer/h_targets.npy')\n",
+    "out = np.load('../with-torch-tests/cross-entropy-layer/h_losses.npy')\n",
+    "\n",
+    "#apply softmax with torch\n",
+    "inp_torch = torch.from_numpy(inp).to(torch.float32).requires_grad_(True)\n",
+    "target = torch.from_numpy(target).to(torch.int64)\n",
+    "print(target)\n",
+    "out_torch = F.cross_entropy(inp_torch,target,reduction='sum')\n",
+    " \n",
+    "print(out)\n",
+    "print(out_torch)\n",
+    "print( np.allclose(out, out_torch.detach().numpy(), atol=1e-4, rtol=1e-4))\n",
+    "\n",
+    "# backpropagation\n",
+    "out_torch.backward()\n",
+    "print(*inp_torch.grad.detach().numpy())\n",
+    "\n",
+    "# read arrays from .npy files and func Linear to compare\n",
+    "grad = np.load('../with-torch-tests/cross-entropy-backward/h_dlogits_after.npy')\n",
+    "print(*grad)"
    ]
   }
  ],
