--- a/nn-cuda/python-codes/testing.ipynb
+++ b/nn-cuda/python-codes/testing.ipynb
@@ -148,18 +148,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor(176.5740, grad_fn=<NllLossBackward0>)"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss  tensor(496.5465, grad_fn=<NllLossBackward0>)\n",
+      "X.grad  tensor([ -4.7811, -11.7715,   3.5236,  -6.7962,  -4.0194,  -8.2134,   1.9479,\n",
+      "         -8.3709,  -3.3159,   3.3129])\n",
+      "l1.weight.grad  tensor([ 1.5576,  0.8099,  1.2056,  0.7529,  0.1605,  0.3699, -0.8539,  0.7200,\n",
+      "        -0.0518,  1.8023])\n",
+      "l1.bias.grad  tensor([ 1.3098,  2.0856,  1.5692, -2.5744,  6.1896,  2.8143,  0.8059,  6.1907,\n",
+      "        -0.5985,  4.9596])\n",
+      "l2.weight.grad  tensor([5.4903e-07, 2.1229e+00, 9.5532e-01, 3.5385e-07, 1.3719e+00, 3.1379e-07,\n",
+      "        9.4665e-01, 8.5790e-01, 2.6598e-01, 1.2820e+00])\n",
+      "l2.bias.grad  tensor([ 8.7478e-01, -9.9939e-01,  1.1529e-11,  5.1760e-01, -1.0000e+00,\n",
+      "         6.9206e-08,  9.5849e-05, -1.0000e+00,  5.0736e+00,  3.1215e-02])\n",
+      "Y1.grad  tensor([ 0.0000, -0.0986,  0.0000,  0.0000,  0.0000,  0.2793,  0.0000,  0.0000,\n",
+      "         0.0000,  1.8125])\n",
+      "y1_relu.grad  tensor([ 0.7263, -0.0986, -0.9475,  1.5721,  0.0949,  0.2793,  0.4666, -0.3098,\n",
+      "        -1.3375,  1.8125])\n",
+      "Y2.grad  tensor([ 2.1647e-07, -1.0000e+00,  3.7421e-29,  1.0168e-15,  7.2258e-07,\n",
+      "         3.0163e-18,  6.2929e-18,  4.5474e-20,  5.7470e-07,  1.3138e-14])\n"
+     ]
     }
    ],
    "source": [
@@ -189,13 +202,31 @@
     "l2.weight.data = torch.from_numpy(ln2w).to(torch.float32)\n",
     "l2.bias.data = torch.from_numpy(ln2b).to(torch.float32)\n",
     "\n",
-    "X = torch.from_numpy(X_c).to(torch.float32)\n",
+    "X = torch.from_numpy(X_c).to(torch.float32).requires_grad_(True)\n",
     "Y1 = l1(X)\n",
+    "# retain grad\n",
+    "Y1.retain_grad()\n",
+    "\n",
     "y1_relu = F.relu(Y1)\n",
+    "y1_relu.retain_grad()\n",
     "Y2 = l2(y1_relu)\n",
+    "Y2.retain_grad()\n",
     "criterion = nn.CrossEntropyLoss(reduction='sum')\n",
     "loss = criterion(Y2, torch.from_numpy(target).long())\n",
-    "loss"
+    "print(\"loss \", loss)\n",
+    "\n",
+    "# backward Pass\n",
+    "loss.backward()\n",
+    "\n",
+    "print(\"X.grad \", X.grad[0,0:10])\n",
+    "print(\"l1.weight.grad \", l1.weight.grad[0,0:10])\n",
+    "print(\"l1.bias.grad \", l1.bias.grad[0:10])\n",
+    "print(\"l2.weight.grad \", l2.weight.grad[0,0:10])\n",
+    "print(\"l2.bias.grad \", l2.bias.grad[0:10])\n",
+    "print(\"Y1.grad \", Y1.grad[0,0:10])\n",
+    "print(\"y1_relu.grad \", y1_relu.grad[0,0:10])\n",
+    "print(\"Y2.grad \", Y2.grad[0,0:10])\n",
+    "    \n"
    ]
   },
   {
@@ -451,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
