--- a/nn-cuda/python-codes/testing.ipynb
+++ b/nn-cuda/python-codes/testing.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -260,9 +260,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(250, 250) (250, 250) (250, 250) (250, 250)\n",
+      "Forward pass comparison:\n",
+      "Y (numpy): [0.8740196  0.         0.         0.         0.19394517]\n",
+      "Y_torch: [0.8740196  0.         0.         0.         0.19394517]\n",
+      "Match: True\n",
+      "\n",
+      "Backward pass comparison:\n",
+      "dX (numpy): [-0.9976806   0.          0.          0.         -0.45951718]\n",
+      "dX_torch: [-0.9976806   0.          0.          0.         -0.45951718]\n",
+      "Match: True\n"
+     ]
+    }
+   ],
    "source": [
     "# Relu forward and backward tests\n",
     "import numpy as np\n",
@@ -275,6 +292,7 @@
     "Y = np.load(r'../with-torch-tests/relu-layer/out_relu.npy')\n",
     "dY = np.load(r'../with-torch-tests/relu-layer/up_grad_relu.npy')\n",
     "dX = np.load(r'../with-torch-tests/relu-layer/down_grad_relu.npy')\n",
+    "print(X.shape, Y.shape, dY.shape, dX.shape)\n",
     "# Convert to PyTorch tensors\n",
     "# make sure to set requires_grad=True for the input tensor so that the Autograd engine can compute the gradients\n",
     "X_torch = torch.from_numpy(X).to(torch.float32).requires_grad_(True)\n",
@@ -371,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
