--- a/nn-cuda/python-codes/testing.ipynb
+++ b/nn-cuda/python-codes/testing.ipynb
@@ -148,15 +148,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss  tensor(96.5041, grad_fn=<NllLossBackward0>)\n",
-      "Forard\n",
+      "loss  354.73419189453125\n",
+      "Forward\n",
       "True\n",
       "True\n",
       "True\n",
@@ -164,6 +164,11 @@
       "True\n",
       "True\n",
       "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "Updated weights\n",
       "True\n",
       "True\n",
       "True\n",
@@ -176,70 +181,129 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "def pp(a1,a2):\n",
+    "            print(a1[0,0:5])\n",
+    "            print(a2[0,0:5])\n",
+    "class DataLoaderModule:\n",
+    "    def __init__(self, data_path):\n",
+    "        self.data_path = data_path\n",
+    "        self.load_data()\n",
     "\n",
-    "# Load the input data\n",
-    "a1 = np.load('../with-torch-tests/all-model/a1.npy')\n",
-    "da1 = np.load('../with-torch-tests/all-model/da1.npy')\n",
-    "dln1 = np.load('../with-torch-tests/all-model/dln1.npy')\n",
-    "dln2 = np.load('../with-torch-tests/all-model/dln2.npy')\n",
-    "dsm = np.load('../with-torch-tests/all-model/dsm.npy')\n",
-    "ln1 = np.load('../with-torch-tests/all-model/ln1.npy')\n",
-    "ln1b_grad = np.load('../with-torch-tests/all-model/ln1b_grad.npy')\n",
-    "ln1b = np.load('../with-torch-tests/all-model/ln1b.npy')\n",
-    "ln1w_grad = np.load('../with-torch-tests/all-model/ln1w_grad.npy')\n",
-    "ln1w = np.load('../with-torch-tests/all-model/ln1w.npy')\n",
-    "ln2 = np.load('../with-torch-tests/all-model/ln2.npy')\n",
-    "ln2b_grad = np.load('../with-torch-tests/all-model/ln2b_grad.npy')\n",
-    "ln2b = np.load('../with-torch-tests/all-model/ln2b.npy')\n",
-    "ln2w_grad = np.load('../with-torch-tests/all-model/ln2w_grad.npy')\n",
-    "ln2w = np.load('../with-torch-tests/all-model/ln2w.npy')\n",
-    "target = np.load('../with-torch-tests/all-model/target.npy')\n",
-    "X_c = np.load('../with-torch-tests/all-model/X_c.npy')\n",
+    "    def load_data(self):\n",
+    "        self.a1 = np.load(f'{self.data_path}/a1.npy')\n",
+    "        self.da1 = np.load(f'{self.data_path}/da1.npy')\n",
+    "        self.dln1 = np.load(f'{self.data_path}/dln1.npy')\n",
+    "        self.dln2 = np.load(f'{self.data_path}/dln2.npy')\n",
+    "        self.dsm = np.load(f'{self.data_path}/dsm.npy')\n",
+    "        self.ln1 = np.load(f'{self.data_path}/ln1.npy')\n",
+    "        self.ln1b_grad = np.load(f'{self.data_path}/ln1b_grad.npy')\n",
+    "        self.ln1b = np.load(f'{self.data_path}/ln1b.npy')\n",
+    "        self.ln1w_grad = np.load(f'{self.data_path}/ln1w_grad.npy')\n",
+    "        self.ln1w = np.load(f'{self.data_path}/ln1w.npy')\n",
+    "        self.ln2 = np.load(f'{self.data_path}/ln2.npy')\n",
+    "        self.ln2b_grad = np.load(f'{self.data_path}/ln2b_grad.npy')\n",
+    "        self.ln2b = np.load(f'{self.data_path}/ln2b.npy')\n",
+    "        self.ln2w_grad = np.load(f'{self.data_path}/ln2w_grad.npy')\n",
+    "        self.ln2w = np.load(f'{self.data_path}/ln2w.npy')\n",
+    "        \n",
+    "        # pp(self.ln1w, self.ln1w)\n",
+    "        \n",
+    "        self.target = np.load(f'{self.data_path}/target.npy')\n",
+    "        self.X_c = np.load(f'{self.data_path}/X_c.npy')\n",
+    "        self.updated_ln1b = np.load(f'{self.data_path}/updated_ln1b.npy')\n",
+    "        self.updated_ln1w = np.load(f'{self.data_path}/updated_ln1w.npy')\n",
+    "        self.updated_ln2b = np.load(f'{self.data_path}/updated_ln2b.npy')\n",
+    "        self.updated_ln2w = np.load(f'{self.data_path}/updated_ln2w.npy')\n",
     "\n",
-    "# get sizes\n",
-    "B,N = X_c.shape\n",
-    "H1,N = ln1w.shape\n",
-    "l1 = nn.Linear(N,H1)\n",
-    "l1.weight.data = torch.from_numpy(ln1w).to(torch.float32)\n",
-    "l1.bias.data = torch.from_numpy(ln1b).to(torch.float32)\n",
+    "class Model(nn.Module):\n",
+    "    def __init__(self, ln1w, ln1b, ln2w, ln2b):\n",
+    "        super(Model, self).__init__()\n",
+    "        N, H1 = ln1w.shape\n",
+    "        H2, _ = ln2w.shape\n",
+    "        \n",
+    "        self.l1 = nn.Linear(N, H1)\n",
+    "        self.l1.weight.data = torch.from_numpy(ln1w).float()\n",
+    "        self.l1.bias.data = torch.from_numpy(ln1b).float()\n",
     "\n",
+    "        self.l2 = nn.Linear(H1, H2)\n",
+    "        self.l2.weight.data = torch.from_numpy(ln2w).float()\n",
+    "        self.l2.bias.data = torch.from_numpy(ln2b).float()\n",
     "\n",
-    "H2,_ = ln2w.shape\n",
-    "l2 = nn.Linear(H1,H2)\n",
-    "l2.weight.data = torch.from_numpy(ln2w).to(torch.float32)\n",
-    "l2.bias.data = torch.from_numpy(ln2b).to(torch.float32)\n",
+    "    def forward(self, x):\n",
+    "        y1 = self.l1(x)\n",
+    "        y1_relu = F.relu(y1)\n",
+    "        y2 = self.l2(y1_relu)\n",
+    "        return y1, y1_relu, y2\n",
     "\n",
-    "X = torch.from_numpy(X_c).to(torch.float32).requires_grad_(True)\n",
-    "Y1 = l1(X)\n",
-    "# retain grad\n",
-    "Y1.retain_grad()\n",
+    "class Trainer:\n",
+    "    def __init__(self, model, data_loader, criterion, optimizer):\n",
+    "        self.model = model\n",
+    "        self.data_loader = data_loader\n",
+    "        self.criterion = criterion\n",
+    "        self.optimizer = optimizer\n",
+    "    \n",
+    "    def train(self):\n",
+    "        X = torch.from_numpy(self.data_loader.X_c).float().requires_grad_(True)\n",
+    "        target = torch.from_numpy(self.data_loader.target).long()\n",
+    "        \n",
+    "        y1, y1_relu, y2 = self.model(X)\n",
     "\n",
-    "y1_relu = F.relu(Y1)\n",
-    "y1_relu.retain_grad()\n",
-    "Y2 = l2(y1_relu)\n",
-    "Y2.retain_grad()\n",
-    "criterion = nn.CrossEntropyLoss(reduction='sum')\n",
-    "loss = criterion(Y2, torch.from_numpy(target).long())\n",
-    "print(\"loss \", loss)\n",
+    "        # Retain gradients\n",
+    "        y1.retain_grad()\n",
+    "        y1_relu.retain_grad()\n",
+    "        y2.retain_grad()\n",
     "\n",
-    "# compare fhe forward pass\n",
-    "print(\"Forard\")\n",
-    "print(np.allclose(Y1.detach().numpy(), ln1, atol=1e-6))\n",
-    "print(np.allclose(y1_relu.detach().numpy(), a1, atol=1e-6))\n",
-    "print(np.allclose(Y2.detach().numpy(), ln2, atol=1e-6))\n",
+    "        loss = self.criterion(y2, target)\n",
+    "        print(\"loss \", loss.item())\n",
     "\n",
-    "# backward Pass\n",
-    "loss.backward()\n",
+    "        # Forward pass comparison\n",
+    "        print(\"Forward\")\n",
+    "        print(np.allclose(y1.detach().numpy(), self.data_loader.ln1, atol=1e-6))\n",
+    "        print(np.allclose(y1_relu.detach().numpy(), self.data_loader.a1, atol=1e-6))\n",
+    "        print(np.allclose(y2.detach().numpy(), self.data_loader.ln2, atol=1e-4))\n",
     "\n",
-    "# compare the gradients\n",
-    "print(\"Back\")\n",
-    "print(np.allclose(Y2.grad.numpy(), dsm, atol=1e-6))\n",
-    "print(np.allclose(y1_relu.grad.numpy(), dln2, atol=1e-6))\n",
-    "print(np.allclose(l2.weight.grad.numpy(), ln2w_grad, atol=1e-6))\n",
-    "print(np.allclose(l2.bias.grad.numpy(), ln2b_grad, atol=1e-6))\n",
-    "print(np.allclose(Y1.grad.numpy(), da1, atol=1e-6))\n",
-    "print(np.allclose(l1.weight.grad.numpy(), ln1w_grad, atol=1e-6))\n",
-    "print(np.allclose(l1.bias.grad.numpy(), ln1b_grad, atol=1e-6))"
+    "        # Backward pass\n",
+    "        self.optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "\n",
+    "        # Compare the gradients\n",
+    "        print(\"Back\")\n",
+    "        print(np.allclose(y2.grad.numpy(), self.data_loader.dsm, atol=1e-4))\n",
+    "        print(np.allclose(y1_relu.grad.numpy(), self.data_loader.dln2, atol=1e-4))\n",
+    "        print(np.allclose(self.model.l2.weight.grad.numpy(), self.data_loader.ln2w_grad, atol=1e-4))\n",
+    "        print(np.allclose(self.model.l2.bias.grad.numpy(), self.data_loader.ln2b_grad, atol=1e-4))\n",
+    "        print(np.allclose(y1.grad.numpy(), self.data_loader.da1, atol=1e-4))\n",
+    "        print(np.allclose(self.model.l1.weight.grad.numpy(), self.data_loader.ln1w_grad, atol=1e-4))\n",
+    "        print(np.allclose(self.model.l1.bias.grad.numpy(), self.data_loader.ln1b_grad, atol=1e-4))\n",
+    "        \n",
+    "        \n",
+    "        # optimzer \n",
+    "        self.optimizer.step()\n",
+    "        \n",
+    "        # print the updated weights\n",
+    "        print(\"Updated weights\")\n",
+    "        print(np.allclose(self.model.l1.weight.detach().numpy(), self.data_loader.updated_ln1w, atol=1e-2))\n",
+    "        # print first elements in both \n",
+    "        \n",
+    "        # pp(self.model.l1.weight.detach().numpy(), self.data_loader.updated_ln1w)\n",
+    "        \n",
+    "        print(np.allclose(self.model.l1.bias.detach().numpy(), self.data_loader.updated_ln1b, atol=1e-4))\n",
+    "        print(np.allclose(self.model.l2.weight.detach().numpy(), self.data_loader.updated_ln2w, atol=1e-4))\n",
+    "        print(np.allclose(self.model.l2.bias.detach().numpy(), self.data_loader.updated_ln2b, atol=1e-4))\n",
+    "def main():\n",
+    "    data_loader = DataLoaderModule('../with-torch-tests/all-model')\n",
+    "    \n",
+    "    model = Model(data_loader.ln1w, data_loader.ln1b, data_loader.ln2w, data_loader.ln2b)\n",
+    "    \n",
+    "    criterion = nn.CrossEntropyLoss(reduction='sum')\n",
+    "    optimizer = torch.optim.SGD(model.parameters(), lr=0.01)\n",
+    "    \n",
+    "    trainer = Trainer(model, data_loader, criterion, optimizer)\n",
+    "    trainer.train()\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
   },
   {
