finish gpu model

--- a/nn-cuda/python-codes/testing.ipynb
+++ b/nn-cuda/python-codes/testing.ipynb
@@ -137,9 +137,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss  354.7342529296875\n",
+      "Forward\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "Back\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "Updated weights\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import torch\n",
@@ -260,7 +285,7 @@
     "    \n",
     "    model = Model(data_loader.ln1w, data_loader.ln1b, data_loader.ln2w, data_loader.ln2b)\n",
     "    \n",
-    "    criterion = nn.CrossEntropyLoss(reduction='mean')\n",
+    "    criterion = nn.CrossEntropyLoss(reduction='sum')\n",
     "    optimizer = torch.optim.SGD(model.parameters(), lr=0.01)\n",
     "    \n",
     "    trainer = Trainer(model, data_loader, criterion, optimizer)\n",
